@@ -3,10 +3,12 @@ package com.example.benomad.service.impl;
 import com.example.benomad.dto.PlaceDTO;
 import com.example.benomad.entity.Place;
 import com.example.benomad.entity.Rating;
+import com.example.benomad.enums.ContentNotFoundEnum;
 import com.example.benomad.enums.PlaceType;
 import com.example.benomad.enums.Region;
+import com.example.benomad.exception.ContentIsNotRatedException;
 import com.example.benomad.exception.InvalidRatingException;
-import com.example.benomad.exception.PlaceNotFoundException;
+import com.example.benomad.exception.ContentNotFoundException;
 import com.example.benomad.mapper.PlaceMapper;
 import com.example.benomad.repository.PlaceRepository;
 import com.example.benomad.repository.RatingRepository;
@@ -20,6 +22,7 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,79 +31,112 @@ public class PlaceServiceImpl implements PlaceService {
     private final PlaceRepository placeRepository;
     private final RatingRepository ratingRepository;
     private final UserRepository userRepository;
+    private final PlaceMapper placeMapper;
 
     @Override
-    public List<PlaceDTO> getAllPlacesByAttributes(String name, Region region, PlaceType placeType,
+    public List<PlaceDTO> getPlacesByAttributes(String name, Region region, PlaceType placeType,
                                                    String address,Boolean match,PageRequest pageRequest) {
         Place builtPlace = Place.builder().name(name).address(address).region(region).placeType(placeType).build();
         Example<Place> exampleOfPlace = Example.of(builtPlace,getExampleMatcher(match));
         Page<Place> pages = placeRepository.findAll(exampleOfPlace,pageRequest);
-        return PlaceMapper.entityListToDtoList(pages.stream().toList(), ratingRepository);
+        return placeMapper.entityListToDtoList(pages.stream().collect(Collectors.toList()));
     }
 
 
     @Override
-    public PlaceDTO getPlaceById(Long id) throws PlaceNotFoundException {
-        return PlaceMapper.entityToDto(placeRepository.findById(id)
-                .orElseThrow(PlaceNotFoundException::new), ratingRepository);
+    public PlaceDTO getPlaceById(Long placeId) throws ContentNotFoundException {
+        return placeMapper.entityToDto(placeRepository.findById(placeId).orElseThrow(
+                () -> {
+                    throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                })
+        );
     }
 
     @Override
     public PlaceDTO insertPlace(PlaceDTO placeDTO) {
         placeDTO.setId(null);
-        placeRepository.save(PlaceMapper.dtoToEntity(placeDTO));
+        placeRepository.save(placeMapper.dtoToEntity(placeDTO));
+        placeDTO.setId(placeRepository.getLastValueOfSequence());
         return placeDTO;
     }
 
     @Override
-    public PlaceDTO deletePlaceById(Long id) throws PlaceNotFoundException {
-        Place place = placeRepository.findById(id).orElseThrow(PlaceNotFoundException::new);
+    public PlaceDTO deletePlaceById(Long placeId) throws ContentNotFoundException {
+        Place place = placeRepository.findById(placeId).orElseThrow(
+                () -> {
+                    throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                }
+        );
         placeRepository.delete(place);
-        return PlaceMapper.entityToDto(place, ratingRepository);
+        return placeMapper.entityToDto(place);
     }
 
     @Override
-    public PlaceDTO updatePlaceById(Long id, PlaceDTO placeDTO) throws PlaceNotFoundException {
-        placeRepository.findById(id).orElseThrow(PlaceNotFoundException::new);
-        placeRepository.save(PlaceMapper.dtoToEntity(placeDTO));
+    public PlaceDTO updatePlaceById(Long placeId, PlaceDTO placeDTO) throws ContentNotFoundException {
+        if(!placeRepository.existsById(placeId)){
+            throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+        }
+        placeRepository.save(placeMapper.dtoToEntity(placeDTO));
         return placeDTO;
     }
 
     @Override
-    public void ratePlaceById(Long placeId, Long userId, Integer rating, boolean isRemoval)
-            throws PlaceNotFoundException, InvalidRatingException {
+    public PlaceDTO ratePlaceById(Long placeId, Long userId, Integer rating, boolean isRemoval)
+            throws ContentNotFoundException, InvalidRatingException {
         if(isRemoval){
-            removeRating(placeId, userId);
-            return;
+            rating = 1;
+            Rating neededRating = ratingRepository.findByPlaceAndUser(
+                    placeRepository.findById(placeId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                            }),
+                    userRepository.findById(userId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, userId);
+                            })
+            ).orElseThrow(
+                    () -> {
+                        throw new ContentIsNotRatedException(ContentNotFoundEnum.PLACE);
+                    });
+            ratingRepository.delete(neededRating);
         }
         if(rating < 1 || rating > 5){
             throw new InvalidRatingException();
         }
         try{
-            //Checking if user have already rated the place or not
-            //if yes then we will just update the rating instead of adding a new one
-            Rating neededRating = ratingRepository.findByPlaceAndUser(placeRepository.findById(placeId).orElseThrow(PlaceNotFoundException::new),
-                    userRepository.findById(userId).orElseThrow(PlaceNotFoundException::new)).orElseThrow(PlaceNotFoundException::new);
+            Rating neededRating = ratingRepository.findByPlaceAndUser(
+                    placeRepository.findById(placeId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                            }),
+                    userRepository.findById(userId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, userId);
+                            }
+                    )).orElseThrow(
+                            () -> {
+                                throw new ContentIsNotRatedException(ContentNotFoundEnum.PLACE);
+                            });
             neededRating.setRating(rating);
             ratingRepository.save(neededRating);
         }catch (Exception e){
-            //If program fails to find a rating in db we will create a new record
             ratingRepository.save(Rating.builder()
-                    .place(placeRepository.findById(placeId).orElseThrow(PlaceNotFoundException::new))
-                    .user(userRepository.findById(userId).orElseThrow(PlaceNotFoundException::new))
+                    .place(placeRepository.findById(placeId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+                            }
+                    ))
+                    .user(userRepository.findById(userId).orElseThrow(
+                            () -> {
+                                throw new ContentNotFoundException(ContentNotFoundEnum.USER, userId);
+                            }
+                    ))
                     .rating(rating)
                     .build());
         }
-
-    }
-
-    @Override
-    public void removeRating(Long placeId, Long userId) throws PlaceNotFoundException{
-        Rating neededRating = ratingRepository.findByPlaceAndUser(
-                placeRepository.findById(placeId).orElseThrow(PlaceNotFoundException::new),
-                userRepository.findById(userId).orElseThrow(PlaceNotFoundException::new)
-        ).orElseThrow(PlaceNotFoundException::new);
-        ratingRepository.delete(neededRating);
+        return placeMapper.entityToDto(placeRepository.findById(placeId).orElseThrow(() -> {
+            throw new ContentNotFoundException(ContentNotFoundEnum.PLACE, placeId);
+        }));
     }
 
     public ExampleMatcher getExampleMatcher(Boolean match) {
@@ -116,6 +152,6 @@ public class PlaceServiceImpl implements PlaceService {
                 .withMatcher("placeType",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withMatcher("address",ExampleMatcher.GenericPropertyMatchers.contains().ignoreCase(true))
                 .withIgnorePaths("id","description","imageUrl","linkUrl");
-        return match ?  matches : notMatches;
+        return match ? matches : notMatches;
     }
 }
